<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".MapsActivity">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
                  android:id="@+id/Locality"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:theme="@style/PrimaryFlatButton"
                  style="@style/Widget.AppCompat.Button.Colored"
                  android:drawableLeft="@drawable/ic_my_location_white_24dp"
                  android:padding="10dp"
                  android:textAlignment="center"
                  android:singleLine="true"
                  android:text="@string/search_place"
                  android:textAllCaps="false"
                  android:textSize="@dimen/font_20" />

        <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:enabled="false"
                android:hint="@string/address"
                android:textSize="16dp"
                android:singleLine="true" />
    </LinearLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/container_toolbar"
            android:id="@+id/framelayout_map">

        <fragment
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MapsActivity" />
        <LinearLayout
                android:id="@+id/locationMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/locationMarkertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_map"
                    android:gravity="center"
                    android:minWidth="130dp"
                    android:text="Destination"
                    android:textSize="12dp"
                    android:textColor="@android:color/white" />

            <ImageView
                    android:id="@+id/imageMarker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/marker" android:contentDescription="Destination"/>

        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_gravity="bottom"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
        android:background="#fff">
            <android.support.v7.widget.AppCompatButton android:layout_width="0dp"
                                                       android:layout_height="wrap_content"
                                                       android:layout_weight="1"
                                                       android:text="@string/quick_search"
                                                       android:theme="@style/PrimaryFlatButton"
                                                       style="@style/Widget.AppCompat.Button.Colored"
                                                       android:id="@+id/quickSearch"
            android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatButton android:layout_width="0dp"
                                                       android:layout_height="wrap_content"
                                                       android:text="@string/advanced_search"
                                                       android:layout_weight="1"
                                                       android:theme="@style/SecondaryFlatButton"
                                                       android:id="@+id/advancedSearch"
                                                       style="@style/Widget.AppCompat.Button.Colored"
                                                       android:textAllCaps="false"/>
        </LinearLayout>

    </FrameLayout>


</RelativeLayout>
